fix : 애플 유저 이름 수정